--- a/FitnessTracker/FitnessTracker.csproj
+++ b/FitnessTracker/FitnessTracker.csproj
@@ -84,6 +84,7 @@
       <HintPath>..\packages\System.Threading.Tasks.Extensions.4.5.4\lib\net461\System.Threading.Tasks.Extensions.dll</HintPath>
     </Reference>
     <Reference Include="System.Transactions" />
+    <Reference Include="System.Windows.Forms.DataVisualization" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -121,6 +122,12 @@
     <Compile Include="RegisterFom.Designer.cs">
       <DependentUpon>RegisterFom.cs</DependentUpon>
     </Compile>
+    <Compile Include="ResultChart.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ResultChart.Designer.cs">
+      <DependentUpon>ResultChart.cs</DependentUpon>
+    </Compile>
     <Compile Include="TrackingClass.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
@@ -139,6 +146,9 @@
     </Compile>
     <EmbeddedResource Include="RegisterFom.resx">
       <DependentUpon>RegisterFom.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ResultChart.resx">
+      <DependentUpon>ResultChart.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
