--- a/FitnessTracker/FitnessTracker.csproj
+++ b/FitnessTracker/FitnessTracker.csproj
@@ -52,6 +52,7 @@
     <Reference Include="Microsoft.Bcl.AsyncInterfaces, Version=8.0.0.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.Bcl.AsyncInterfaces.8.0.0\lib\net462\Microsoft.Bcl.AsyncInterfaces.dll</HintPath>
     </Reference>
+    <Reference Include="Microsoft.VisualBasic" />
     <Reference Include="MySql.Data, Version=8.4.0.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL">
       <HintPath>..\packages\MySql.Data.8.4.0\lib\net462\MySql.Data.dll</HintPath>
     </Reference>
@@ -102,6 +103,12 @@
   <ItemGroup>
     <Compile Include="CaloriesCalClass.cs" />
     <Compile Include="connectdb.cs" />
+    <Compile Include="forgetPasswordForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="forgetPasswordForm.Designer.cs">
+      <DependentUpon>forgetPasswordForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -130,6 +137,9 @@
       <DependentUpon>ResultChart.cs</DependentUpon>
     </Compile>
     <Compile Include="TrackingClass.cs" />
+    <EmbeddedResource Include="forgetPasswordForm.resx">
+      <DependentUpon>forgetPasswordForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
